--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,4 +1,12 @@
-include: package:flutter_lints/flutter.yaml
+include: package:flutter_iconica_analysis/components_options.yaml
 
-# Additional information about this file can be found at
-# https://dart.dev/guides/language/analysis-options
+# https://dart-lang.github.io/linter/lints/index.html
+
+# Possible to overwrite the rules from the package
+
+analyzer:
+  plugins:
+  exclude:
+
+linter:
+  rules:
